Bug 1336388 - Use overlapping tilt mechanism in always tilt mode. r=mtseng

MozReview-Commit-ID: LwWnAbHiTBH